--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,10 @@ input[type=submit] {
 }
 
 
-@media only screen and (min-width: 1025px) {
+
+
+/*Desktop*/
+@media only screen and (min-width: 992px) {
   body {
     background-color: blue;
   }
@@ -53,3 +56,5 @@ input[type=submit] {
     float:left;
   }
 }
+
+
