--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+html {
+  line-height: 1.2em;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 16px;
+}
+
 body {
   background-color: #2b5f88;
   color: #d8e7f3
