--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ h1 {
 
 #container {
   width: 100%;
-  
 }
 
 label {
@@ -35,15 +34,14 @@ input {
 }
 
 input[type=join] {
- width: 10em;
+ width: 11.089em;
  background-color: #4CAF50;
   color: white;
-  padding: 12px 20px;
+  padding: 1em 1.618em; /*16px 25.88px*/
   border: none;
-  border-radius: 4px;
+  border-radius: 0.236em; /* 3.777px */
   cursor: pointer;
   float: right;
-  
 }
 
 
