--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ input[type=submit] {
   border: none;
   border-radius: 0.236em; /* 3.777px */
   cursor: pointer;
-  float: right;
+  float: center;
 }
 
 
