--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ input {
   display: block;
   box-sizing: border-box;
   margin:auto;
+  padding: 1em;
   width: 100%;
   border: 1px solid #ccc;
   border-radius: 4px;
