--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h1 {
 #container {
   width: 100%;
   margin:auto;
+  padding: 1em;
 }
 
 label {
@@ -30,7 +31,7 @@ input {
   box-sizing: border-box;
   margin:auto;
   padding: 0.9em;
-  width: 90%;
+  width: 100%;
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: vertical;
