--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@ input {
 }
 
 input[type=submit] {
+  display: block;
+  box-sizing: border-box;
+  margin: auto;
  width: 11.089em;
  background-color: #0D6767;
   color: white;
@@ -45,7 +48,7 @@ input[type=submit] {
   border: none;
   border-radius: 0.236em; /* 3.777px */
   cursor: pointer;
-  float: center;
+  
 }
 
 
