--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ h1 {
 #container {
   width: 90%;
   margin:auto;
+  background-color: orange;
 }
 
 label {
@@ -28,6 +29,7 @@ label {
   box-sizing:border-box;
   margin:auto;
   width: 100%;
+  background-color: red;
 }
 
 input {
