--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ h1 {
   width: 90%;
   margin:auto;
   background-color: orange;
+  display:block;
+  box-sizing:border-box;
 }
 
 label {
@@ -69,7 +71,7 @@ input[type=submit] {
   input {width:50%;}
 
   label {
-    width: 10%;
+    width: 6em;
     float:left;
   }
  
