--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h1 {
 #container {
   width: 90%;
   margin:auto;
-  background-color: orange;
+  background-color: green;
   display:block;
   box-sizing:border-box;
 }
@@ -31,7 +31,7 @@ label {
   box-sizing:border-box;
   margin:auto;
   width: 100%;
-  background-color: red;
+  background-color: blue;
 }
 
 input {
