--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ label {
   box-sizing:border-box;
   margin:auto;
   width: 100%;
-  background-color: blue;
+  background-color: red;
 }
 
 input {
@@ -54,7 +54,6 @@ input[type=submit] {
  background-color: #0D6767;
   color: white;
   padding: 1em 1.618em; /*16px 25.88px*/
-  margin-top: 1em;
   border: none;
   border-radius: 0.236em; /* 3.777px */
   cursor: pointer;
