--- a/css/style.css
+++ b/css/style.css
@@ -24,24 +24,21 @@ h1 {
   background-color: green;
   display:block;
   box-sizing:border-box;
+  padding:1em;
 }
 
 label {
-  /*
   display:block;
   box-sizing:border-box;
   margin:auto;
-  */
   width: 100%;
   background-color: red;
 }
 
 input {
-  /*
   display: block;
   box-sizing: border-box;
   margin:auto;
-  */
   padding: 0.9em;
   width: 100%;
   border: 1px solid #ccc;
